# try-c

./: LICENSE  README.md
asyncprocessing/: CMakeLists.txt  Generator.cpp  Generator.h  Inner.cpp  Outer.h  main.cpp
asyncprocessing-boost_steady-timer/: CMakeLists.txt  Generator.h  Inner.h  Outer.cpp  main.cpp
learning98/scraps/: CMakeLists.txt  main.cpp  stack.cpp  stack.h
testing/: AutoTest.cpp  BadRunningAverage.cpp  BadRunningAverage.h  BoostDatesTest.cpp  BoostTidbitsTest.cpp  CMakeLists.txt  CompilationChecks.cpp  CopyAndMoveTest.cpp  DestructuringTest.cpp  EncoderTest.cpp  GoodRunningAverage.cpp  GoodRunningAverage.h  GreeterFunctionTest.cpp  Greeting.cpp  Greeting.h  GreetingTest.cpp  HorribleTricksTest.cpp  InitializationAndIterationsTest.cpp  MathTidbitsTest.cpp  PredicatesTest.cpp  RunningAverage.cpp  RunningAverage.h  RunningAverageTest.cpp  ScopesTest.cpp  SillyTest.cpp  SimpleCollectionsTest.cpp  SortingTest.cpp  TypeDeterminationTest.cpp
try-cuda/simple/: hello.cu
